@@ -26,6 +26,7 @@ import org.apache.openjpa.persistence.simple.AllFieldTypes;
 import org.apache.openjpa.persistence.OpenJPAPersistence;
 import org.apache.openjpa.persistence.FetchPlan;
 import org.apache.openjpa.persistence.OpenJPAEntityManager;
+import org.apache.openjpa.jdbc.sql.DB2Dictionary;
 import org.apache.openjpa.jdbc.sql.DBDictionary;
 import org.apache.openjpa.jdbc.sql.HSQLDictionary;
 import org.apache.openjpa.jdbc.conf.JDBCConfiguration;
@@ -58,7 +59,45 @@ public class TestSelectForUpdateOverride
             em.find(AllFieldTypes.class, 0);
 
             assertEquals(1, sql.size());
-            assertSQL(".*FOR UPDATE.*");
+            if (dict instanceof DB2Dictionary &&((((DB2Dictionary)dict).
+                getDb2ServerType() == 1) || ((DB2Dictionary)dict)
+                    .getDb2ServerType()== 2)) {
+                assertEquals(1, sql.size());
+                assertSQL("SELECT t0.booleanField, t0.byteField, "
+                    + "t0.charField, t0.dateField, t0.doubleField,"
+                    + " t0.floatField, t0.intField, t0.longField,"
+                    + " t0.shortField, t0.stringField FROM "
+                    + "AllFieldTypes t0 WHERE t0.id = \\? "
+                    + " FOR UPDATE OF optimize for 1 row");
+            }
+            // it is DB2 v82 or later
+            else if (dict instanceof DB2Dictionary &&((((DB2Dictionary)dict).
+                getDb2ServerType() == 3) || ((DB2Dictionary)dict)
+                    .getDb2ServerType() == 4)) {
+                assertEquals(1, sql.size());
+                assertSQL("SELECT t0.booleanField, t0.byteField, "
+                    + "t0.charField, t0.dateField, t0.doubleField,"
+                    + " t0.floatField, t0.intField, t0.longField,"
+                    + " t0.shortField, t0.stringField FROM "
+                    + "AllFieldTypes t0 WHERE t0.id = \\? "
+                    + " FOR READ ONLY WITH RS USE AND KEEP UPDATE LOCKS" 
+                    + " optimize for 1 row");
+            }
+            else if (dict instanceof DB2Dictionary && ((DB2Dictionary)dict).
+                getDb2ServerType() == 5) {
+                assertEquals(1, sql.size());
+                assertSQL("SELECT t0.booleanField, t0.byteField, "
+                    + "t0.charField, t0.dateField, t0.doubleField,"
+                    + " t0.floatField, t0.intField, t0.longField,"
+                    + " t0.shortField, t0.stringField FROM "
+                    + "AllFieldTypes t0 WHERE t0.id = \\? "
+                    + " FOR READ ONLY WITH RS USE AND KEEP EXCLUSIVE LOCKS"
+                    + " optimize for 1 row");
+            }    
+            else if (dict instanceof DB2Dictionary) {
+                fail("OpenJPA currently only supports per-query isolation " +
+                "level configuration on the following databases: DB2");
+            }
         } finally {
             em.getTransaction().rollback();
             em.close();
