@@ -5,6 +5,7 @@
 
 <ul>
 <li><a href="#Overview">Overview</a></li>
+<li><a href="#License">License</a></li>
 <li><a href="#Prerequisites">Prerequisites</a></li>
 <li><a href="#Documentation">Documentation</a></li>
 <li><a href="#GetInvolved">Getting Involved</a></li>
@@ -32,6 +33,28 @@ Java Community Process
 Additional information on the OpenJPA project may be found at the project web 
 site: <a href="http://incubator.apache.org/openjpa/">
 http://incubator.apache.org/openjpa/</a>
+
+<h2><a name="License"></a>License</h2>
+<P>Licensed to the Apache Software Foundation (ASF) under one
+or more contributor license agreements.  See the NOTICE file
+distributed with this work for additional information
+regarding copyright ownership.  The ASF licenses this file
+to you under the Apache License, Version 2.0 (the
+"License"); you may not use this file except in compliance
+with the License.  You may obtain a copy of the License at
+
+<BR><P><a href="http://www.apache.org/licenses/LICENSE-2.0">
+http://www.apache.org/licenses/LICENSE-2.0</a>
+
+<BR><P>Unless required by applicable law or agreed to in writing,
+software distributed under the License is distributed on an
+"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+KIND, either express or implied.  See the License for the
+specific language governing permissions and limitations
+under the License.
+
+<BR><P>The license may also be found in LICENSE.txt which is included 
+in each release of OpenJPA. 
 
 <h2><a name="Prerequisites"></a>Prerequisites</h2>
 <P>
@@ -135,6 +158,7 @@ The following bugs have been fixed since release 0.9.6
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-202'>OPENJPA-202</a>] - after invoking LRS processing in a client by calling an @LRS annotated relationship, the next em.clear()/em.close() gets org.apache.openjpa.persistence.InvalidStateException: You cannot transfer large result set fields from one object or field to another</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-208'>OPENJPA-208</a>] - NoResultException and NonUniqueResultException are not thrown when expected</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-214'>OPENJPA-214</a>] - Need to support floating point primary keys</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-214'>OPENJPA-222</a>] - FOR READ ONLY clause getting generated for subselects</li>
 </ul>
     
 <h2><a name="Improvements"</a>Improvements</h2>
